--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node ./src/index.ts",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run"
   },
@@ -25,6 +25,7 @@
     "express-async-errors": "^3.1.1",
     "oracledb": "^5.5.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.16",
     "typeorm-model-generator": "^0.4.6",
     "typeorm-sequence": "^1.1.3"
