--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "oracledb": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
